--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,9 @@
 *{font-family: "Public Sans";}
 
 .background {
-    width: 100vw;
+    width: 80vw;
     height: 100vh;
+
     background-color: rgb(248, 248, 248);
     overflow: hidden;
 }
@@ -15,7 +16,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 5vw;
-    margin-bottom: 5vw;
+    margin-bottom: 3vw;
 }
 
 .navBar {
@@ -25,8 +26,9 @@
     background-color: rgba(107, 136, 204, 0.35);
     overflow: hidden;
 
-    position: absolute;
-    left: 0;
+    position: relative;
+    margin-top: -10px;
+    margin-left: -10px;
 }
 
 .navBar ul {
@@ -34,7 +36,7 @@
 
     list-style-type: none;
     margin: 0;
-    margin-left: 10%;
+    margin-left: 12.5%;
     padding: 0;
 }
 
@@ -56,4 +58,8 @@
     display: inline-block;
     vertical-align: middle;
     margin-right: 1.5vw;
+}
+
+li .activePage {
+    color: rgb(11, 99, 248);
 }
