--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,38 @@
 li .activePage {
     color: rgb(11, 99, 248);
 }
+
+.tableBackground {
+    width: 70vw;
+    height: 30vw;
+    background-color: white;
+}
+
+table {
+    width: 100%;
+    height: 100%;
+
+    background-color: black;
+
+    border-collapse: collapse; /* Ensures borders are merged */
+    margin: 20px 0; /* Adds spacing around the table */
+  }
+  
+  th, td {
+    padding: 12px; /* Adds space inside each cell */
+    text-align: left; /* Aligns text to the left */
+    /*border: 1px solid #ddd; /* Light gray border around cells */
+  }
+  
+  th {
+    background-color: white;
+    font-weight: 600;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #f9f9f9; /* Alternates row colors for better readability */
+  }
+  
+  tr:hover {
+    background-color: #f1f1f1; /* Highlights the row when hovered */
+  }
