--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,11 @@
 *{font-family: "Public Sans";}
 
 .background {
-    width: 80vw;
-    height: 100vh;
-
+    display: flex;
+    justify-content: center;  /* Centers horizontally */
+    align-items: center;      /* Centers vertically */
+    width: 100vw;             /* Full viewport width */
+    height: 100vh;            /* Full viewport height */
     background-color: rgb(248, 248, 248);
     overflow: hidden;
 }
@@ -66,35 +68,53 @@ li .activePage {
 
 .tableBackground {
     width: 70vw;
-    height: 40vw;
+    height: 35vw;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 table {
     width: 100%;
+    max-width: 100%;
     height: 100%;
-
-    background-color: black;
-
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
     border-collapse: collapse; /* Ensures borders are merged */
     margin: 20px 0; /* Adds spacing around the table */
-  }
+}
   
-  th, td {
+.ISBN {
+    color: rgb(61, 145, 255);
+}
+
+th, td {
     padding: 12px; /* Adds space inside each cell */
     text-align: left; /* Aligns text to the left */
-    /*border: 1px solid #ddd; /* Light gray border around cells */
-  }
+    /*border: 1px solid #ddd; Light gray border around cells */
+    border-bottom: 1px solid #ddd;
+}
   
-  th {
+th {
     background-color: white;
     font-weight: 600;
-  }
+}
+
+tbody {
+    color: #333333;
+    font-weight: 200;
+}
   
-  tr:nth-child(even) {
-    background-color: #f9f9f9; /* Alternates row colors for better readability */
-  }
+tbody tr:hover td, tbody tr:hover th {
+    background-color: #f1f1f1;
+}
+
+tbody tr:hover td:not(.ISBN),
+tbody tr:hover th:not(.ISBN) { 
+    color: #000000;
+}
+
   
-  tr:hover {
-    background-color: #f1f1f1; /* Highlights the row when hovered */
-  }
