--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,14 @@
 .background {
     width: 80vw;
     height: 100vh;
-
     background-color: rgb(248, 248, 248);
     overflow: hidden;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .logo {
     width: 75%;
-
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -22,10 +22,8 @@
 .navBar {
     width: 18vw;
     height: 100vh;
-
     background-color: rgba(107, 136, 204, 0.35);
     overflow: hidden;
-
     position: relative;
     margin-top: -10px;
     margin-left: -10px;
@@ -33,7 +31,6 @@
 
 .navBar ul {
     width: 100%;
-
     list-style-type: none;
     margin: 0;
     margin-left: 12.5%;
