--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
 }
 
 .navBar {
-    width: 18vw;
+    width: 22.5vw;
     height: 100vh;
     background-color: rgba(107, 136, 204, 0.35);
     overflow: hidden;
@@ -59,4 +59,59 @@
 
 li .activePage {
     color: rgb(11, 99, 248);
+}
+
+.tableBackground {
+    width: 70vw;
+    height: 80%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-left: 10vw;
+    margin-top: 5vw;
+    overflow: auto; 
+    box-sizing: border-box; 
+}
+
+table {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border-collapse: collapse; /* Ensures borders are merged */
+    margin: 20px 0; /* Adds spacing around the table */
+}
+  
+.ISBN {
+    color: rgb(61, 145, 255);
+}
+
+th, td {
+    padding: 12px; /* Adds space inside each cell */
+    text-align: left; /* Aligns text to the left */
+    /*border: 1px solid #ddd; Light gray border around cells */
+    border-bottom: 1px solid #ddd;
+}
+  
+th {
+    background-color: white;
+    font-weight: 600;
+}
+
+tbody {
+    color: #333333;
+    font-weight: 200;
+}
+  
+tbody tr:hover td, tbody tr:hover th {
+    background-color: #f1f1f1;
+}
+
+tbody tr:hover td:not(.ISBN),
+tbody tr:hover th:not(.ISBN) { 
+    color: #000000;
 }
