--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     width: 100vw;             /* Full viewport width */
     height: 100vh;            /* Full viewport height */
     background-color: rgb(248, 248, 248);
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     justify-content: flex-start;
 }
@@ -79,6 +79,7 @@ table {
     width: 100%;
     max-width: 100%;
     height: 100%;
+    overflow-y: scroll;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     border-collapse: collapse; /* Ensures borders are merged */
